# $Id$
2008-04-01 Benoit Grégoire  <bock@step.polymtl.ca>
	* Apply patch from dc.ml@oxys.net to allow commas in authentication parameter strings.  This is sometimes necessary for LDAP, and fixes #342

2008-03-31 Robin Jones
    * Minor install script improvements, including making changelog accessible and colour in the permissions tables

2008-03-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* generic_object_admin.php (and others):  Fix bug reported by  Jerry DeFoe (ProfileTemplates couldn't be created) + some UI tweaks.
	
2008-03-21 Benoit Grégoire  <bock@step.polymtl.ca>
	* hotspot_status.php:  Fix bug in XSLT procesing.

2008-03-15 Benoit Grégoire  <bock@step.polymtl.ca>
	* Content.php:  Eliminate the generation of a large number of useless SQL queries when getting Content metadata.
	* User.php: Do the same thing for getCurrentUser()
	
2008-03-12 Benoit Grégoire  <bock@step.polymtl.ca>
    * Major performance improvement in content manager for content groups picking items with limits on how many times they can be displayed.
	* Improve performance of Content::getLastDisplayedTimestamp(), will mostly show when using the RSS aggregator, especially when postgres has little memory
	
2008-03-06 Benoit Grégoire  <bock@step.polymtl.ca>
    * Fix #438.  Not Node::getNumOnlineUsers() will count every users connected (once for every account), except the splash-only user + every mac adresses connecting as the splash-only user.
	* Network::getNumOnlineUsers() use the same counting method
	* Network.php:  Reformat variables names according to coding standards.
	
2008-03-02 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #431: Don't even display the Signup button if none of the networks allow signing up.  Allow Authenticators to define the signup URL themselves.

2008-02-27 Damien Raude-Morvan <drazzib@drazzib.com>
    * Update french translation

2008-02-12 Max Horváth  <max.horvath@freenet.de>
    * Fixed issue in install.php when POSIX is unavailable to PHP